--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   },
   "devDependencies": {
     "prettier": "^1.16.4"
+  },
+  "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
+    "react-markdown": "^4.3.1"
   }
 }
