--- a/E1-static-export/package.json
+++ b/E1-static-export/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "export": "next export",
     "start": "next start"
   },
   "license": "ISC",
@@ -11,6 +12,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "serve": "^11.3.0"
   }
 }
